--- a/src/universidadgrupo33/vistas/JIFAlumno.form
+++ b/src/universidadgrupo33/vistas/JIFAlumno.form
@@ -77,7 +77,7 @@
                                       <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
                                       <Component id="jbModificar" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="jBRecuperar" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jbRecuperar" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                           </Group>
@@ -139,7 +139,7 @@
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="jbSalir" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jbEliminar" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jBRecuperar" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jbRecuperar" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Component id="jbNuevo" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -297,7 +297,6 @@
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser1">
       <Properties>
-        <Property name="dateFormatString" type="java.lang.String" value="dd/MM/yyyy"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="14" style="1"/>
         </Property>
@@ -314,7 +313,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbModificarActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jBRecuperar">
+    <Component class="javax.swing.JButton" name="jbRecuperar">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="1"/>
@@ -322,7 +321,7 @@
         <Property name="text" type="java.lang.String" value="Recuperar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBRecuperarActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbRecuperarActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
