--- a/src/universidadgrupo33/vistas/JIFMateria.form
+++ b/src/universidadgrupo33/vistas/JIFMateria.form
@@ -293,7 +293,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="A&#xf1;o;"/>
+        <Property name="text" type="java.lang.String" value="A&#xf1;o:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jtfA&#xf1;o">
